# cdk_flutter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/cdk_flutter_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: home.dart  main.dart  melt.dart  mint.dart  mint_quote.dart  receive.dart  request.dart  send.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: cdk_flutter.podspec
lib/: cdk_flutter.dart  widgets.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: bitcoin.dart  bolt11.dart  error.dart  error.freezed.dart  key.dart  mint.dart  mint.freezed.dart  payment_request.dart  token.dart  wallet.dart  wallet.freezed.dart
linux/: CMakeLists.txt
macos/: cdk_flutter.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: bitcoin.rs  bolt11.rs  error.rs  init.rs  key.rs  mint.rs  mod.rs  payment_request.rs  token.rs  wallet.rs
windows/: CMakeLists.txt
