[package]
name = "cdk_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bc-ur = { version = "0.12.0", default-features = false }
bip21 = { version = "0.5.0", features = ["non-compliant-bytes", "std"] }
cdk = { git = "https://github.com/davidcaseria/cdk.git", branch = "increment-keyset-counter-on-error", default-features = false, features = [
    "wallet",
] }
cdk-common = { git = "https://github.com/davidcaseria/cdk.git", branch = "increment-keyset-counter-on-error", default-features = false }
cdk-sqlite = { git = "https://github.com/davidcaseria/cdk.git", branch = "increment-keyset-counter-on-error", default-features = false, features = [
    "wallet",
] }
flutter_rust_bridge = { version = "=2.10.0", default-features = false, features = [
    "anyhow",
    "dart-opaque",
    "portable-atomic",
    "rust-async",
    "thread-pool",
    "wasm-start",
] }
futures = "0.3.31"
log = { version = "0.4.27", default-features = false }
nostr = { version = "0.42.1", default-features = false }
nostr-sdk = { version = "0.42.0", default-features = false, features = [
    "nip59",
] }
rand = { version = "0.9.1", default-features = false, features = [
    "thread_rng",
] }
reqwest = { version = "0.12.18", default-features = false, features = [
    "deflate",
    "gzip",
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "std",
] }
tokio = { version = "1.45.1", default-features = false }
tracing = { version = "0.1.41", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.15" }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = { version = "0.2.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
