[package]
name = "cdk_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bc-ur = { version = "0.12.0", default-features = false }
bip21 = { version = "0.5.0", features = ["non-compliant-bytes", "std"] }
bip39 = { version = "2.1", default-features = false, features = ["std"] }
cdk = { version = "0.13.4", default-features = false, features = [
    "wallet",
] }
cdk-common = { version = "0.13.4", default-features = false }
cdk-sqlite = { version = "0.13.4", default-features = false, features = [
    "wallet",
] }
flutter_rust_bridge = { version = "=2.11.1", default-features = false, features = [
    "anyhow",
    "dart-opaque",
    "portable-atomic",
    "rust-async",
    "thread-pool",
    "wasm-start",
] }
futures = "0.3.31"
log = { version = "0.4.28", default-features = false }
nostr = { version = "0.42.2", default-features = false }
nostr-sdk = { version = "0.42.0", default-features = false, features = [
    "nip59",
] }
rand = { version = "0.9.2", default-features = false, features = [
    "thread_rng",
] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "deflate",
    "gzip",
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde_json = { version = "1.0.145", default-features = false, features = [
    "std",
] }
tokio = { version = "1.48.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.15" }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = { version = "0.2.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
